--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "apollo-utilities": "^1.3.2",
     "axios": "^0.19.0",
     "chart.js": "^2.8.0",
+    "classnames": "^2.2.6",
     "formik": "^1.5.7",
     "graphql": "^14.4.2",
     "graphql-tag": "^2.10.1",
@@ -30,9 +31,12 @@
     "react-pose": "^4.0.8",
     "react-redux": "^6.0.1",
     "react-scripts": "^3.0.1",
+    "react-ui-cards": "^2.0.0",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.88.1",
     "subscriptions-transport-ws": "^0.9.16"
   },
   "devDependencies": {
