--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.19.0",
     "chart.js": "^2.8.0",
     "classnames": "^2.2.6",
+    "date-fns": "^2.2.1",
     "formik": "^1.5.7",
     "graphql": "^14.4.2",
     "graphql-tag": "^2.10.1",
