--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "classnames": "^2.2.6",
     "date-fns": "^2.2.1",
     "formik": "^1.5.7",
+    "google-maps-react": "^2.0.2",
     "graphql": "^14.4.2",
     "graphql-tag": "^2.10.1",
     "react": "^16.8.6",
@@ -29,6 +30,7 @@
     "react-chartjs-2": "^2.7.6",
     "react-ckeditor-component": "^1.1.0",
     "react-dom": "^16.8.6",
+    "react-highlight-words": "^0.16.0",
     "react-pose": "^4.0.8",
     "react-redux": "^6.0.1",
     "react-scripts": "^3.0.1",
